re PR c++/21228 (-Wunreachable-code produces spurious warnings for constructor)

PR c++/21228
	* decl.c (use_eh_spec_block): New function.
	(store_parm_decls): Use it.
	(finish_function): Likewise.
	
	PR c++/21228
	* g++.dg/warn/Wunreachable-code-2.C: New test.

From-SVN: r108850